src/validation/tests/snapshots/rusty__validation__tests__builtin_validation_tests__arithmetic_builtins_allow_mixing_of_fp_and_int_params.snap
---
source: src/validation/tests/builtin_validation_tests.rs
expression: diagnostics
---
warning: Implicit downcast from 'LREAL' to 'DINT'.
  ┌─ <internal>:9:22
  │
9 │             res_i := ADD(i1, i2, f1, f2);
  │                      ^^^^^^^^^^^^^^^^^^^ Implicit downcast from 'LREAL' to 'DINT'.

warning: Implicit downcast from 'LREAL' to 'DINT'.
   ┌─ <internal>:11:22
   │
11 │             res_i := SUB(i1, f2);
   │                      ^^^^^^^^^^^ Implicit downcast from 'LREAL' to 'DINT'.
