src/validation/tests/snapshots/rusty__validation__tests__builtin_validation_tests__shr_must_validate_types.snap
---
source: src/validation/tests/builtin_validation_tests.rs
expression: "&diagnostics"
---
error[E031]: Invalid expression, types STRING and INT are incompatible in the given context
  ┌─ <internal>:5:17
  │
5 │             SHR('foo',2);
  │                 ^^^^^ Invalid expression, types STRING and INT are incompatible in the given context
